--- a/BeANativeBot/BeANativeBot.csproj
+++ b/BeANativeBot/BeANativeBot.csproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
+    <Compile Include="DetailsPlace.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -135,6 +136,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\BeANativeBot - Web Deploy %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\BeANativeBot - Web Deploy %283%29.pubxml" />
+    <None Include="Properties\PublishProfiles\BeANativeBot - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
