--- a/BeANativeBot/Web.config
+++ b/BeANativeBot/Web.config
@@ -7,8 +7,8 @@
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
     <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="MicrosoftAppId" value="e1030160-df60-4158-a534-a4eb98b219ff" />
+    <add key="MicrosoftAppPassword" value="9hbdqeihEtfOVmyJstBwOmD" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
