--- a/BeANativeBot/BeANativeBot.csproj
+++ b/BeANativeBot/BeANativeBot.csproj
@@ -123,6 +123,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutCard.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="DetailsPlace.cs" />
